mon/MDSMonitor: copy MDS info which may be removed

Otherwise the log entry will contain garbage (and crash the mgr).

Fixes: https://tracker.ceph.com/issues/46216
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>